kubernetes/redpanda.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redpanda
