kubernetes/face-spoofing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoofing-deployment
  labels:
    app: spoofing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spoofing
  template:
    metadata:
      labels:
        app: spoofing 
    spec:
      containers:
      - name: spoofing
        image: jorgevasquezutec/cloud-spoofing
        ports:
        - containerPort: 3004
