kubernetes/cloud-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front 
    spec:
      containers:
      - name: front
        image: jorgevasquezutec/cloud-front
        ports:
        - containerPort: 80
        imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front 
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 80
