kubernetes/cloud-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server 
    spec:
      containers:
      - name: server
        image: jorgevasquezutec/cloud-server
        ports:
        - containerPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server 
  type: NodePort
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
    nodePort: 30001
